# toohakai

./: .dockerignore  .gitignore  .gitmodules  .npmrc  .prettierignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/scripts/: e2e.sh
.github/workflows/: cd.yml  ci.yml
apps/api/: package.json
apps/llmproxy/: README.md  package.json  pyproject.toml
apps/llmproxy/llmproxy/: main.py  validation_script.py
apps/server/: .env.example  .eslintrc.cjs  Dockerfile  example.env  package.json  tsconfig.json
apps/server/src/: app.ts  index.ts  server.ts
apps/server/src/__tests__/: server.test.ts
apps/web/: .env.example  .eslintrc.js  Dockerfile  components.json  cypress.config.ts  example.env  jest.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/__tests__/: LoginButton.test.tsx
apps/web/coverage/lcov-report/: NewQuestionBankButton.tsx.html
apps/web/cypress/e2e/: app.cy.ts
apps/web/public/mockdata/: question-bank.json  quiz-topics.json  student-quiz-reports.json  student-quiz-result.json
apps/web/src/: middleware.ts
apps/web/src/MockData/: expanded_quizreport.json  quiz_report.json  quiz_topics.json
apps/web/src/app/: _app.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: LoginButton.tsx  Page.tsx  ProfileButton.tsx  QuestionDetails.tsx  QuizReport_Filters.tsx  QuizReport_Table.tsx  Sidebar.tsx  profileButton.tsx
apps/web/src/context/: configContext.tsx
docker/local/: .gitignore  server.env.example  web.env.example
(+169 files in other folders)
