[tool.poetry]
name = "llmproxy"
version = "0.1.0"
description = ""
authors = ["dyllon <dyllon001@e.ntu.edu.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^0.5.6"
flask = "^3.0.0"
pydantic = "^2.4.2"
flask-pydantic = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
